--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,11 @@
     width: 110px;
     position: fixed;
     z-index: 1;
-    padding-top: 50%;
+    padding-top: 40px;
     top: auto;
     left: auto;
     overflow-x: hidden;
+    overflow-y: hidden;
     background-image: url(./imgs/texture.jpg)
   }
 
