--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,10 @@
 .nav-item {
     list-style-type: none;
 }
-
-.btn-color {
-    background-color:cornflowerblue;
-    color: white;
+.btn-primary {
+  background-color: cornflowerblue !important;
+  color: white !important;
 }
-
 .sidenav {
     height: 100%;
     width: 110px;
@@ -40,7 +38,8 @@
   }
 
   body {
-    background-color:lightgrey
+    background-color:lightgrey;
+
   }
 
   .card-img-top {
@@ -52,3 +51,5 @@
     align-items: center;
     padding: 10px;
   }
+
+  
