--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,22 @@
     padding-top: 40px;
   }
 
+  #page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;   
+  }
+  
   footer {
     text-align: center;
+    position;
+    padding-left: 120px;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
   }
 
   header {
