--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,13 @@
     padding-bottom: 2.5rem;   
   }
   
+  .about {
+    text-align: center;
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   footer {
     text-align: center;
     position;
