--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 .hours {
   list-style: none;
-  
 }
 
 .sidenav {
@@ -24,11 +23,6 @@
     background-image: url(./imgs/texture.jpg)
   }
 
-  .footer {
-    padding-left: 120px;
-    padding-top: 40px;
-  }
-
   #page-container {
     position: relative;
     min-height: 100vh;
@@ -38,21 +32,20 @@
     padding-bottom: 2.5rem;   
   }
   
-  .about {
+  /* .about {
     text-align: center;
     max-width: 70%;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  /* p {
-    text-align: center;
   } */
+
+  p {
+    text-align: center;
+  }
 
   footer {
     text-align: center;
-    position;
-
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 2.5rem;  
@@ -60,7 +53,7 @@
 
   header {
     padding-left: 120px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
     background-color:cornflowerblue;
     height: 40px;
@@ -70,33 +63,29 @@
 
   body {
     background-color:lightgrey;
+    
   }
 
   img {
-    height: 100px;
-    width: 100px;
+    max-height: 100px;
+    max-width: 100px;
+  }
+
+  .main-content {
+    padding-left: 120px;
+    padding-top: 40px;
   }
 
   .shop-container{
     display: flex;
     direction: column;
     flex-wrap: wrap;
-    padding-left: 120px;
-    padding-top: 40px;
   }
 
-  .product{
-    width: 25%;
-    height: 10%;
-    margin-left: 3%;
-    margin-right: 3%;
-    margin-bottom: 3%;
-    margin-top: 3%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border: 2px solid grey;
-    border-radius: 10px;
-    background-color:cornflowerblue;
+  .product {
+    background-color: cornflowerblue;
+  }
+
+h5 {
+  padding-top: 3%;
 }
