--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,11 @@
     display: flex;
     direction: column;
     flex-wrap: wrap;
+    
+  }
+
+  .card {
+    box-shadow: 10px 10px darkgray;
   }
 
   .product {
